test/fixtures/diagnostics/type-checker/positive/enum-declaration/input.tysh
namespace Samples.TypeChecker.EnumDeclaration

enum Color {
  Red,
  Green,
  Blue
}

let favorite: Color = Color.Green

fun choose(): Color =
  Color.Red
