test/fixtures/diagnostics/type-checker/negative/yield-non-iterator/input.tysh
namespace Samples.Yield.NonIterator

fun broken(): int {
  yield 42
}
